--- a/VCard/Components/Pages/StudentPages/Edit.razor
+++ b/VCard/Components/Pages/StudentPages/Edit.razor
@@ -49,7 +49,7 @@ else
 }
 
 <div>
-    <a href="/students">Back to List</a>
+    <a href="/">Back to List</a>
 </div>
 
 @code {
@@ -91,7 +91,7 @@ else
             }
         }
 
-        NavigationManager.NavigateTo("/students");
+        NavigationManager.NavigateTo("/");
     }
 
     bool StudentExists(int id)
